--- a/exercise3/webprog6.html
+++ b/exercise3/webprog6.html
@@ -5,6 +5,7 @@
 </head>
 <body background="webprog bg pic.jpg">
 <font face="Batang" align="center">
+<center>
 <h1>My Home Page</h1>
 
 <h2><br>Other interests/hobbies</h2>
