edited and finished

--- a/exercise1/mypage.html
+++ b/exercise1/mypage.html
@@ -5,7 +5,9 @@
 </head>
 
 <body background="webprog bg pic.jpg">
+
 <center><br><h1><font size="10",font face="batang">My Home Page</font></h1><center>
+
 <br><br><img src="webprog pic.jpg" align="middle" width="100" height="100">
 <p><b><br><font size="5",font face="batang">Name</font></b></p>
 <p><font size="5",font face="batangche">Wyatt Zeus Holgado</font></p>
@@ -14,9 +16,10 @@
 <p><b><br><br><font size="5",font face="batang">Hobbies and Interest</font></b></p>
 <p><font size="5",font face="batangche">Playing computer games like Dota 2 and CsGO, Reading, Sports and Music</font></p>
 <p><b><br><br><font size="5",font face="batang">My favorite websites</b></p>
-<p><a href="https://www.youtube.com/"><img src="webprog youtube.png" hspace=10 vspace=10 width="200" height="90"><a href="https://www.facebook.com/"><img src="webprog fb.png" hspace=0 vspace=10 width="250" height="90"></a></a></p>
-</body>
+<p><a href="https://www.youtube.com/"><img src="webprog youtube.png" hspace=10 vspace=10 width="200" height="90"><a href="https://www.facebook.com/">
+<img src="webprog fb.png" hspace=0 vspace=10 width="250" height="90"></a></a></p>
 
+</body>
 </html>
 
 
