edited and finished exercise 4

--- a/exercise4/webprog6.html
+++ b/exercise4/webprog6.html
@@ -6,7 +6,7 @@
 <body background="webprog bg pic.jpg">
 <font face="Batang" align="center">
 <center>
-<h1>My Home Page</h1>
+<h1><br>My Home Page</h1>
 
 <h2><br>Other interests/hobbies</h2>
 <p id="demo"> 
@@ -33,11 +33,7 @@
 <button type="button" onclick="document.getElementById('demo4').innerHTML = 'Im a GOD!'">Answer</button>
 </p>
 </font>
-<<<<<<< HEAD
 <br><br><br><br><br><input type="button" name="b2" value="Back" onclick="location.href='webprog5.html'"><input type="button" name="b3" value="Next" onclick="location.href='webprog8.php'">
-
-=======
->>>>>>> ae41cf53460d71a6fd53d7c745a283fd915f62c8
 </body>
 </html>
 
