--- a/exercise4/webprog5.html
+++ b/exercise4/webprog5.html
@@ -31,7 +31,7 @@ td, th {
 </style>
 </head>
 <body>
-<h1 id="pic"><center><img src="webprog pic.jpg" alt="pic" style="width:70px;height:70px;"> My Home Page</a></h1>
+<h1 id="pic"><center><img src="webprog pic.jpg" alt="pic" style="width:70px;height:70px;"> About Me</a></h1>
 <table>
   <tr>
     <th>NAME</th>
@@ -66,7 +66,7 @@ td, th {
   </tr>
   
   <tr>
-    <td> <input type="button" name="b1" value="Next Page" onclick="location.href='webprog6.html'">
+    <td> <input type="button" name="b4" value="Back" onclick="location.href='webprog8.php'"><input type="button" name="b1" value="Next Page" onclick="location.href='webprog6.html'">
 </table>
 
 </body>
